[package]
name = "xtool"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
base85 = "2.0.0"
clap = { version = "4.6.1", features = ["derive"] }
data-encoding = "2.11.0"
faster-hex = "0.10.0"
memmap2 = "0.9.10"
sha2 = "0.11.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
